// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries user 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "user": {
          "email": "member@member.com",
          "firstName": "User",
          "id": "1",
          "lastName": "Test",
          "role": "MEMBER",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`queries word by id 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "word": {
          "additionalInfo": null,
          "audioUrl": "https://www.oxfordlearnersdictionaries.com/media/english/uk_pron/e/ega/egali/egalitarian__gb_1.mp3",
          "defs": [
            {
              "def": "a person who believes that everyone is equal and should have the same rights and opportunities",
              "examples": [
                "He described himself as ‘an {it}egalitarian{/it}’.",
              ],
            },
            {
              "def": "aiming for equal wealth, status, etc., for all people",
              "examples": [
                "He is a committed {it}egalitarian{/it}",
                "Even in the {it}egalitarian{/it} Nordic country, Marin felt hergender and age sometimes received too much emphasis. Kostya Manenkov And Karl Ritter, USA TODAY, 21 Aug. 2022",
              ],
            },
          ],
          "id": "mockid",
          "imgUrl": null,
          "isOffensive": false,
          "level": "C1",
          "name": "egalitarian",
          "particle": "noun",
          "stems": [
            "egalitarian",
            "egalitarianism",
            "egalitarians",
          ],
          "transcription": [
            "iˌɡælɪˈteəriən",
          ],
          "user": "1",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`queries words 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "words": [
          {
            "audioUrl": "https://www.oxfordlearnersdictionaries.com/media/english/uk_pron/e/ega/egali/egalitarian__gb_1.mp3",
            "defs": [
              {
                "def": "a person who believes that everyone is equal and should have the same rights and opportunities",
              },
              {
                "def": "aiming for equal wealth, status, etc., for all people",
              },
            ],
            "id": "mockid",
            "isOffensive": false,
            "level": "C1",
            "name": "egalitarian",
            "particle": "noun",
            "transcription": [
              "iˌɡælɪˈteəriən",
            ],
          },
        ],
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
